2008-09-17  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/monitor/nagios/stream.py:
	  Initialize self._gsterror

2008-09-17  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/monitor/nagios/stream.py:
	  Default to using gnomevfssrc, it's the oldest element and thus
	  more available, it's actually in base, and it throws a halfway
	  decent error on a 401, in contrast with the other two.
	  Add an option to treat resource read errors as OK; this is a
	  stopgap until this code gets changed to take a manager's bouncer
	  state for that streamer into account.

2008-09-16  Johan Dahlin  <johan@flumotion.com>

	* flumotion/common/i18n.py (installGettext):
	Check if bindtextdomain & textdomain are available before
	calling them.

	* flumotion/common/bundle.py: Make sure that renaming
	a temporary file in a bundle works on win32.

	* flumotion/common/netutils.py: Do nested import of fcntl,
	since it's not available on all platforms.

2008-09-15  Arek Korbik  <arkadini@gmail.com>

	* flumotion/common/config.py (parsePlug):
	* flumotion/manager/config.py (parseBool):
	Add some (old) deprecation warnings.

2008-09-16  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/monitor/nagios/stream.py:
	  gst.element_factory_make() raises gst.PluginNotFoundError, so
	  handle it.

2008-09-15  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/monitor/nagios/stream.py:
	  Also parse ELEMENT messages for missing-plugin.
	  Makes the checks work with neonhttpsrc and gnomevfssrc too.
	  Select the source element from a list of possibilities.
	  Import flumotion.common.log, easier to backport.

2008-09-15  Arek Korbik  <arkadini@gmail.com>

	* flumotion/admin/gtk/httpstreamersteps.py (checkElements):
	* flumotion/admin/gtk/overlaystep.py (checkElements):
	* flumotion/component/bouncers/ipbouncer.py (IPBouncer.do_setup):
	* flumotion/component/combiners/switch/switch.py (Switch.addWarning):